简单生成deploy.rb。简单sample测试

--- a/sample/Gemfile
+++ b/sample/Gemfile
@@ -38,6 +38,7 @@ end
 
 gem 'mongoid', '~> 4.0.2'
 gem 'haml'
+gem "mina", "~>0.3.7"
 
 gem 'play_auth', :github => 'mindpin/play_auth',
                  :tag => :latest
