figaro根据config/application.yml.sample逐个要求输入env，写入远程shared/config/application.yml

--- a/sample/Gemfile
+++ b/sample/Gemfile
@@ -39,6 +39,7 @@ end
 gem 'mongoid', '~> 4.0.2'
 gem 'haml'
 gem "mina", "~>0.3.7"
+gem "figaro"
 
 gem 'play_auth', :github => 'mindpin/play_auth',
                  :tag => :latest
